force-app/main/default/objects/Workshop_Settings__mdt/Workshop_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Workshop Settings</label>
    <pluralLabel>Workshop Settings</pluralLabel>
</CustomObject>