force-app/main/default/objects/Workshop_Settings__mdt/fields/Agent_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Api_Name__c</fullName>
    <label>Agent API Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Developer name of the starter Employee Agent V1 the attendee builds in Agent Studio.</description>
    <inlineHelpText>Developer name of the starter agent (e.g. Note_taking_agent).</inlineHelpText>
</CustomField>