force-app/main/default/objects/Workshop_Settings__mdt/fields/Package_Install_URL__c.field-meta.xml
<CustomField>
    <fullName>Package_Install_URL__c</fullName>
    <label>Package Install URL</label>
    <type>Url</type>
    <description>Link to install (or re-install) the supporting-assets package.</description>
    <inlineHelpText>The package install link, shown for reference on the launchpad.</inlineHelpText>
</CustomField>