force-app/main/default/objects/Workshop_Settings__mdt/fields/Permission_Set_Groups__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Groups__c</fullName>
    <label>Permission Set Groups</label>
    <type>TextArea</type>
    <description>Comma- or newline-separated developer names of permission set groups to assign to the running user during setup.</description>
    <inlineHelpText>Developer names of permission set groups to assign (comma or newline separated).</inlineHelpText>
</CustomField>