force-app/main/default/objects/Workshop_Settings__mdt/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <label>Permission Sets</label>
    <type>TextArea</type>
    <description>Comma- or newline-separated API names of permission sets to assign to the running user during setup.</description>
    <inlineHelpText>API names of permission sets to assign (comma or newline separated).</inlineHelpText>
</CustomField>