force-app/main/default/objects/Workshop_Settings__mdt/fields/Workshop_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Guide_URL__c</fullName>
    <label>Workshop Guide URL</label>
    <type>Url</type>
    <description>Link to the self-guided workshop web app the attendee follows.</description>
    <inlineHelpText>The full URL of the self-guided workshop guide (the React web app).</inlineHelpText>
</CustomField>